--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <div class="visible-phone" id="blackBar">
     <a href="#top">About</a>
     <a href="#projects">Projects</a>
-    <a target="_blank"
-       href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
 </div>
 
 <body>
@@ -32,9 +30,6 @@
         <ul class="nav nav-list bs-docs-sidenav hidden-phone">
             <li><a href="#top">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a target="_blank"
-                   href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
-            </li>
         </ul>
         <hr class="hidden-phone">
         <div class="text-center hidden-phone">
@@ -56,9 +51,7 @@
             <h5>
                 hanyuwang.w@gmail.com
             / <a target="_blank" 
-                 href="https://github.com/yihui-he">GitHub</a>
-            / <a target="_blank"
-                 href="https://drive.google.com/open?id=16ZSY62e2LgWYXuYuX4GVbbJ3OnU9bwl8">CV</a>
+                 href="https://github.com/bunnywhy">GitHub</a>
             </h5>
             <p>
                 I am currently a backend engineer located in Hangzhou, China. I obtained my Bachelor's and Master's degrees from UIUC ECE in four fruitful years.
