--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <!-- <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/Screen%20Shot%202018-10-03%20at%2001.53.35.png" width="96px" height="96px"> -->
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/385_3.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
