--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                               
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/Screen%20Shot%202018-10-03%20at%2001.53.35.png" width="96px" height="96px">
+                    <!-- <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/Screen%20Shot%202018-10-03%20at%2001.53.35.png" width="96px" height="96px"> -->
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
@@ -147,7 +147,7 @@
             
             <div class="media">
                 <a name="address" class="pull-left">
-                    <!-- <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/Screen%20Shot%202018-10-03%20at%2001.53.35.png" width="96px" height="96px"> -->
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/391_4.jpg" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
@@ -167,7 +167,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <!-- <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/yihui-he.github.io/master/assets/Screen%20Shot%202018-10-03%20at%2001.53.35.png" width="96px" height="96px"> -->
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/385_4.jpg" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
