--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                  href="https://github.com/bunnywhy">GitHub</a>
             </h5>
             <p>
-                I am currently a backend engineer located in Hangzhou, China. I obtained my Bachelor's and Master's degrees from UIUC ECE in four fruitful years.
-                My tech interest lies in website development, data analysis, computer vision and hardware products.
+                I am currently a backend engineer located in Hangzhou, China. I obtained Bachelor's and Master's degrees from UIUC ECE in four fruitful years.
+                My tech interest lies in data analysis, computer vision, hardware products and software engineering.
             </p>
             <p>
                 During my undergrad and master studies, I took a variety of courses related to computer science and electrical engineering.
-                I gained abundant knowledge in software and hardware fields and also got to know some inspiring friends.
+                I had abundant experiences in software and hardware fields and also got to know some inspiring friends.
             </p>
             <p>
                 <!-- My goal is to become a product manager with a deep understanding in users and products. -->
@@ -82,11 +82,19 @@
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            Machine Problems, CS 598 Deep Learning
+                            Homeworks, CS 598 Deep Learning
                      </strong><br>
                     </p>
                     <p class="abstract-text">
-                       We propose a collection of three shift-based primitives for building efficient compact CNN-based networks. These three primitives (channel shift, address shift, shortcut shift) can reduce the inference time on GPU while maintains the prediction accuracy. These shift-based primitives only moves the pointer but avoids memory copy, thus very fast.
+                        The course used Python and PyTorch. I learned main structures like CNN, RNN, LSTM, etc. and main applications like NLP. <br>
+                        HW 1 - Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). <br>
+                        Test accuracy achieves 97.20%. <br>
+                        HW 2 - Implemented and trained a convolution neural network from scratch in Python for the MNIST dataset (no PyTorch). <br>
+                        Implemented the details of convolution without using SciPy's convolution function. The CNN has one hidden layer and 5 channels. <br>
+                        Test accuracy achieves 98.00%. <br>
+                        HW 3 - Trained a deep convolution network on GPU with PyTorch for the CIFAR10 dataset. <br>
+                        The CNN uses dropout and data aumentation, and it was trained with ADAM. <br>
+                        Test accuracy achieves 80.09%. <br>
                     </p>
                 </div>
             </div>
@@ -179,10 +187,10 @@
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip
-                        Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver
-                        Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi
-                        Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display
+                        Wrote design proposal and the project’s final report
+                        Utilized Altera DE2-115 board, Quartus II and ModelSim to perform FPGA programming
+                        Designed a large-scale state machine to control the game’s logic and flow using language SystemVerilog
+                        Utilized USB and VGA ports to achieve keyboard control on the game and display .png pictures precisely on monitor
                     </p>
                 </div>
             </div>
