updated img and index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <a href="#courses">Courses</a>
 </div>
 
+
+
+
 <body>
 
 <div class="container span3 hidden-phone">
@@ -87,14 +90,26 @@
                     </p>
                     <p class="abstract-text">
                         The course used Python and PyTorch. I learned main structures like CNN, RNN, LSTM, etc. and main applications like NLP. <br>
-                        HW 1 - Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). <br>
-                        Test accuracy achieves 97.20%. <br>
-                        HW 2 - Implemented and trained a convolution neural network from scratch in Python for the MNIST dataset (no PyTorch). <br>
-                        Implemented the details of convolution without using SciPy's convolution function. The CNN has one hidden layer and 5 channels. <br>
-                        Test accuracy achieves 98.00%. <br>
-                        HW 3 - Trained a deep convolution network on GPU with PyTorch for the CIFAR10 dataset. <br>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 1 - Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). 
+                        Test accuracy 97.20%. </div>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 2 - Implemented and trained a CNN from scratch in Python for the MNIST dataset (no PyTorch). <br>
+                        Implemented the details of convolution without using SciPy's convolution function. The CNN has one hidden layer and 5 channels.
+                        Test accuracy 98.00%. </div>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 3 - Trained a deep convolution network on GPU with PyTorch for the CIFAR10 dataset. <br>
                         The CNN uses dropout and data aumentation, and it was trained with ADAM. <br>
-                        Test accuracy achieves 80.09%. <br>
+                        Test accuracy achieves 80.09%. </div>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 4 - Implemented building blocks of ResNets and put them together to build and 
+                        train a deep residual neural network for image classification on CIFAR100. Utilized transfer learning; used a 
+                        pretrained ResNet and trained it on CIFAR100. <br>
+                        Test accuracy without using pretrained model is 63.92%, otherwise 87.95%. </div>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 6 - A tutorial on GAN. <br>
+                        Trained a GAN for CIFAR10 classification. <br>
+                        Trained a generator-discriminator pair on CIFAR10 dataset utilizing techniques from ACGAN and Wasserstein GANs. </div>
+                        <div style="text-indent: -4.60em; margin-left: 4.60em;"> HW 7&8 - Tutorials on NLP <br>
+                        Trained models to detect the sentiment of IMDB movie reviews. <br>
+                        Fed a movie review into a model and have it to predict whether the review is positive or negative.
+                        <a target="_blank"
+                            href="http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.pdf">[reference]</a> </div>
                     </p>
                 </div>
             </div>
