--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 </div>
 
 
-
-
 <body>
 
 <div class="container span3 hidden-phone">
@@ -63,8 +61,8 @@
                 My tech interest lies in data analysis, computer vision, hardware products and software engineering.
             </p>
             <p>
-                During my undergrad and master studies, I took a variety of courses related to computer science and electrical engineering.
-                I had abundant experiences in software and hardware fields and also got to know some inspiring friends.
+                During my undergrad and master studies, I took a variety of courses in computer science and electrical engineering.
+                These courses gave me abundant hands-on experiences in software and hardware. I also got to know some inspiring friends who share common interests with me.
             </p>
             <p>
                 <!-- My goal is to become a product manager with a deep understanding in users and products. -->
@@ -80,7 +78,7 @@
                               
             <div class="media">
                 <a name="address" class="pull-right">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/receptive%20field.png" width="160px" height="160px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/receptive%20field.png" width="150px" height="150px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
@@ -90,21 +88,21 @@
                     </p>
                     <p class="abstract-text">
                         The course used Python and PyTorch. I learned main structures like CNN, RNN, LSTM, etc. and main applications like object detection and NLP. <br>
-                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 1 - Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). 
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 1 - </b> Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). 
                         Test accuracy 97.20%. </div>
-                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 2 - Implemented and trained a CNN from scratch in Python for the MNIST dataset (no PyTorch). <br>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 2 - </b> Implemented and trained a CNN from scratch in Python for the MNIST dataset (no PyTorch). <br>
                         Implemented the details of convolution without using SciPy's convolution function. The CNN has one hidden layer and 5 channels.
                         Test accuracy 98.00%. </div>
-                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 3 - Trained a deep convolution network on GPU with PyTorch for the CIFAR10 dataset. <br>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 3 - </b> Trained a deep convolution network on GPU with PyTorch for the CIFAR10 dataset. <br>
                         The CNN uses dropout and data aumentation, and it was trained with ADAM. 
                         Test accuracy 80.09%. </div>
-                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 4 - Implemented building blocks of ResNets and put them together to build and 
-                        train a deep residual neural network for image classification on CIFAR100. Utilized transfer learning; used a 
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 4 - </b> Implemented building blocks of ResNets and put them together to build and 
+                        train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
                         pretrained ResNet and trained it on CIFAR100. 
                         Test accuracy without using pretrained model is 63.92%, otherwise 87.95%. </div>
-                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> HW 6 - A tutorial on GAN <br>
+                        <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 6 - </b> A tutorial on GAN <br>
                         Trained a GAN for CIFAR10 classification; trained a generator-discriminator pair on CIFAR10 dataset utilizing techniques from ACGAN and Wasserstein GANs. </div>
-                        <div style="text-indent: -4.60em; margin-left: 4.60em;"> HW 7&8 - Tutorials on NLP <br>
+                        <div style="text-indent: -4.60em; margin-left: 4.60em;"> <b> HW 7&8 - </b> Tutorials on NLP <br>
                         Trained models to detect the sentiment of IMDB movie reviews. Fed a review into a model and have it to predict whether the review is positive or negative.
                         <a target="_blank"
                             href="http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.pdf">[reference]</a> </div>
@@ -156,14 +154,14 @@
                     <p class="media-heading">
                         <strong>
                             ECE 445 Senior Design
-                        </strong><br>
+                        </strong>
                         <a target="_blank"
                             href="https://courses.engr.illinois.edu/ece445/getfile.asp?id=9518">[link]</a>
                     </p>
                     <p class="abstract-text">
-                        Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip
-                        Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver
-                        Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi
+                        Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip <br>
+                        Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver <br>
+                        Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi <br>
                         Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display
                     </p>
                 </div>
@@ -180,8 +178,8 @@
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Implemented an operating system having similarities with Linux in x86 Assembly and C with three teammates
-                        Implemented interrupt, exception and system call handlers; implemented the procedure of context switch
+                        Implemented an operating system having similarities with Linux in x86 Assembly and C with three teammates <br>
+                        Implemented interrupt, exception and system call handlers; implemented the procedure of context switch <br>
                         Implemented RTC, PIT, keyboard, mouse and speaker drivers with a teammate
                         Thoroughly understood paging and scheduling
 
@@ -200,9 +198,9 @@
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Wrote design proposal and the project’s final report
-                        Utilized Altera DE2-115 board, Quartus II and ModelSim to perform FPGA programming
-                        Designed a large-scale state machine to control the game’s logic and flow using language SystemVerilog
+                        Wrote design proposal and the project’s final report <br>
+                        Utilized Altera DE2-115 board, Quartus II and ModelSim to perform FPGA programming <br>
+                        Designed a large-scale state machine to control the game’s logic and flow using language SystemVerilog <br>
                         Utilized USB and VGA ports to achieve keyboard control on the game and display .png pictures precisely on monitor
                     </p>
                 </div>
