--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
             </h3>
                               
             <div class="media">
-                <a name="address" class="pull-right">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/receptive%20field.png" width="150px" height="150px">
-                </a>
+                
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
@@ -88,6 +86,11 @@
                     </p>
                     <p class="abstract-text">
                         The course used Python and PyTorch. I learned main structures like CNN, RNN, LSTM, etc. and main applications like object detection and NLP. <br>
+
+                        <a name="address" class="pull-right">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/receptive%20field.png" width="150px" height="150px">
+                        </a>
+
                         <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 1 - </b> Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). 
                         Test accuracy 97.20%. </div>
                         <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 2 - </b> Implemented and trained a CNN from scratch in Python for the MNIST dataset (no PyTorch). <br>
@@ -105,7 +108,15 @@
                         <div style="text-indent: -4.60em; margin-left: 4.60em;"> <b> HW 7&8 - </b> Tutorials on NLP <br>
                         Trained models to detect the sentiment of IMDB movie reviews. Fed a review into a model and have it to predict whether the review is positive or negative.
                         <a target="_blank"
-                            href="http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.pdf">[reference]</a> </div>
+                            href="http://ai.stanford.edu/~amaas/papers/wvSent_acl2011.pdf">[reference]
+                        </a> </div>
+
+                        <div>
+                        <b> 综述 </b> <br>
+                        - 深入学习了梯度下降、反向传播、CNN、优化算法、正则化方法、批标准化、ResNet、RNN、GAN、深度强化学习等和相关计算 <br>
+                        - 用Python实现了CNN并训练MNIST数据集，用PyTorch实现DCNN和ResNet并在GPU上训练CIFAR100数据集; 均达到高精确率 <br>
+                        - 详细通读了Goodfellow, Bengio, et al. Deep Learning、《机器学习》（周志华著）和Stanford CS231n的笔记 </div>
+
                     </p>
                 </div>
             </div>
@@ -129,19 +140,22 @@
             </div>
 
             <div class="media">
-                <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
-                </a>
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
                             Machine problems, CS 418 Computer Graphics
                         </strong><br>
-                        <a target="_blank"
-                            href="https://arxiv.org/pdf/1809.08458.pdf">[arXiv]</a>
                     </p>
                     <p class="abstract-text">
-                        We propose a collection of three shift-based primitives for building efficient compact CNN-based networks. These three primitives (channel shift, address shift, shortcut shift) can reduce the inference time on GPU while maintains the prediction accuracy. These shift-based primitives only moves the pointer but avoids memory copy, thus very fast.
+                        <a name="address" class="pull-left">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                        </a>
+                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 1 - </b> 
+                            Implemented building blocks of ResNets and put them together to build and 
+                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
+                            pretrained ResNet and trained it on CIFAR100. 
+                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        </div>
                     </p>
                 </div>
             </div>
@@ -159,10 +173,10 @@
                             href="https://courses.engr.illinois.edu/ece445/getfile.asp?id=9518">[link]</a>
                     </p>
                     <p class="abstract-text">
-                        Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip <br>
-                        Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver <br>
-                        Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi <br>
-                        Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display
+                        - Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip <br>
+                        - Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver <br>
+                        - Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi <br>
+                        - Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display
                     </p>
                 </div>
             </div>
