--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
                         </a> </div>
 
                         <div>
-                        <b> 综述 </b> <br>
+                        <b> Summary </b> <br>
                         - 深入学习了梯度下降、反向传播、CNN、优化算法、正则化方法、批标准化、ResNet、RNN、GAN、深度强化学习等和相关计算 <br>
                         - 用Python实现了CNN并训练MNIST数据集，用PyTorch实现DCNN和ResNet并在GPU上训练CIFAR100数据集; 均达到高精确率 <br>
                         - 详细通读了Goodfellow, Bengio, et al. Deep Learning、《机器学习》（周志华著）和Stanford CS231n的笔记 </div>
-
                     </p>
                 </div>
             </div>
@@ -151,6 +150,36 @@
                             <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 1 - </b> 
+                            Implemented building blocks of ResNets and put them together to build and 
+                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
+                            pretrained ResNet and trained it on CIFAR100. 
+                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        </div>
+
+                        <a name="address" class="pull-left">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                        </a>
+                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 2 - </b> 
+                            Implemented building blocks of ResNets and put them together to build and 
+                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
+                            pretrained ResNet and trained it on CIFAR100. 
+                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        </div>
+
+                        <a name="address" class="pull-left">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                        </a>
+                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 3 - </b> 
+                            Implemented building blocks of ResNets and put them together to build and 
+                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
+                            pretrained ResNet and trained it on CIFAR100. 
+                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        </div>
+
+                        <a name="address" class="pull-left">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                        </a>
+                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 4 - </b> 
                             Implemented building blocks of ResNets and put them together to build and 
                             train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
                             pretrained ResNet and trained it on CIFAR100. 
