--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <div class="visible-phone" id="blackBar">
     <a href="#top">About</a>
+    <a href="#portfolio">Portfolio</a>
     <a href="#projects">Projects</a>
     <a href="#courses">Courses</a>
 </div>
@@ -31,6 +32,7 @@
         <br>
         <ul class="nav nav-list bs-docs-sidenav hidden-phone">
             <li><a href="#top">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#courses">Courses</a></li>
         </ul>
@@ -69,6 +71,51 @@
             </p> 
 
             <br>
+
+            <!--
+             *** Portfolio ***
+            -->
+            <h3>
+                <a name="portfolio"></a> Portfolio
+            </h3>
+                              
+            <div class="media">
+                <div class="media-body">
+                    <p>
+                        <b>
+                            Visio - <font face="STKaiti", size="3.5"> 架构图</font>_1
+                        </b>
+                        <a target="_blank"
+                            href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/%E6%9E%B6%E6%9E%84%E5%9B%BE_1.png">[link]
+                        </a>
+
+                        <b>
+                            <font color="white">- </font><font face="STKaiti", size="3.5"> 架构图</font>_2
+                        </b>
+                        <a target="_blank"
+                            href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/%E6%9E%B6%E6%9E%84%E5%9B%BE_2.png">[link]
+                        </a> <br>
+
+                        <b> Axure - <font face="STKaiti", size="3.5"> 酒店预订</font> APP<font face="STKaiti", size="3.5">原型 </font> </b>
+                        <a target="_blank"
+                            href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/%E9%85%92%E5%BA%97%E9%A2%84%E8%AE%A2APP%E5%8E%9F%E5%9E%8B.rp">[prototype]
+                        </a> <br>
+
+                        <b> Photoshop - <font face="STKaiti", size="3.5"> 海报</font> </b>
+                        <a target="_blank"
+                            href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/photoshop%E4%BD%9C%E5%93%81.jpg">[poster]
+                        </a> <br>
+
+                        <b> <font face="STKaiti", size="3.5"> 摄影 </font> </b>
+                        <a target="_blank"
+                            href="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/portfolio/photography">[link]
+                        </a>
+
+                    </p>
+                </div>
+            </div>
+            <br>
+
             <!--
              *** Projects ***
             -->
@@ -132,7 +179,7 @@
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Use Python libraries like numpy, numpy.linalg, scipy, matplotlib.pyplot, etc. to perform data analysis
+                        Use Python libraries like numpy, numpy.linalg, scipy, matplotlib.pyplot, etc. to perform data analysis. <br>
                         Use Newton's method to reduce computing errors by minimizing the function's Jacobian.
                     </p>
                 </div>
@@ -156,6 +203,8 @@
                             Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
                         </div>
 
+                        <br> <br>
+
                         <a name="address" class="pull-left">
                             <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
                         </a>
@@ -166,6 +215,8 @@
                             Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
                         </div>
 
+                        <br> <br>
+
                         <a name="address" class="pull-left">
                             <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
                         </a>
@@ -175,6 +226,8 @@
                             pretrained ResNet and trained it on CIFAR100. 
                             Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
                         </div>
+
+                        <br> <br>
 
                         <a name="address" class="pull-left">
                             <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
@@ -202,10 +255,10 @@
                             href="https://courses.engr.illinois.edu/ece445/getfile.asp?id=9518">[link]</a>
                     </p>
                     <p class="abstract-text">
-                        - Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip <br>
-                        - Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver <br>
-                        - Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi <br>
-                        - Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display
+                        Designed a piece of PCB of size 109.5×86.6 mm; the board integrated an ESP8266 Wi-Fi module chip, a dual motor driver chip, a 16-bit I/O expander chip and a 12-bit I2C ADC chip; <br>
+                        Selected suitable chips and hardware including gearmotor, temperature sensor and infrared emitter and receiver; <br>
+                        Initialized ESP8266 chip and web hosting service; enabled connection between chip and a website through Wi-Fi; <br>
+                        Wrote Arduino code to set motor driver’s power, read current temperature and infrared device’s status and display them on a 7-segment LED display.
                     </p>
                 </div>
             </div>
