--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
                         </b>
                         <a target="_blank"
                             href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/%E6%9E%B6%E6%9E%84%E5%9B%BE_2.png">[link]
-                        </a> <br>
+                        </a> <br> <br>
 
                         <b> Axure - <font face="STKaiti", size="3.5"> 酒店预订</font> APP<font face="STKaiti", size="3.5">原型 </font> </b>
                         <a target="_blank"
                             href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/%E9%85%92%E5%BA%97%E9%A2%84%E8%AE%A2APP%E5%8E%9F%E5%9E%8B.rp">[prototype]
-                        </a> <br>
+                        </a> <br> <br>
 
                         <b> Photoshop - <font face="STKaiti", size="3.5"> 海报</font> </b>
                         <a target="_blank"
                             href="https://github.com/bunnywhy/bunnywhy.github.io/blob/master/portfolio/photoshop%E4%BD%9C%E5%93%81.jpg">[poster]
-                        </a> <br>
+                        </a> <br> <br>
 
                         <b> <font face="STKaiti", size="3.5"> 摄影 </font> </b>
                         <a target="_blank"
@@ -180,7 +180,7 @@
                     </p>
                     <p class="abstract-text">
                         Use Python libraries like numpy, numpy.linalg, scipy, matplotlib.pyplot, etc. to perform data analysis. <br>
-                        Use Newton's method to reduce computing errors by minimizing the function's Jacobian.
+                        Use Newton's method to reduce computing errors by minimizing the function's Jacobian. <br>
                     </p>
                 </div>
             </div>
@@ -194,59 +194,45 @@
                     </p>
                     <p class="abstract-text">
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_1.png" width="115px" height="115px">
                         </a>
-                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 1 - </b> 
-                            Implemented building blocks of ResNets and put them together to build and 
-                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
-                            pretrained ResNet and trained it on CIFAR100. 
-                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 1 - Badge Animation </b> <br>
+                            Modeled Illinois Victory Badge with a 2-D mesh of triangles; <br>
+                            Animated the model with affine transformations and non-uniform motion. <br>
                         </div>
 
-                        <br> <br>
+                        <hr style="height:15pt; visibility:hidden;" />
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_2.png" width="115px" height="115px">
                         </a>
-                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 2 - </b> 
-                            Implemented building blocks of ResNets and put them together to build and 
-                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
-                            pretrained ResNet and trained it on CIFAR100. 
-                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
-                        </div>
-
-                        <br> <br>
+                        <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 2 - Flight Simulator </b> <br>
+                            Generated a terrain with diamond-square algorithm; <br>
+                            Added a cloud of fog over the terrain; <br>
+                            Created a light source with Blinn-Phong shading; <br>
+                            Implemented a quaternion-based viewing system. <br>
+                        </div> <br> <br>
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_4.png" width="115px" height="115px">
                         </a>
-                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 3 - </b> 
-                            Implemented building blocks of ResNets and put them together to build and 
-                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
-                            pretrained ResNet and trained it on CIFAR100. 
-                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
-                        </div>
-
-                        <br> <br>
-
-                        <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418.png" width="96px" height="96px">
-                        </a>
-                        <div style="text-indent: 0.05em; margin-left: 7.5em;"> <b> MP 4 - </b> 
-                            Implemented building blocks of ResNets and put them together to build and 
-                            train a deep RNN for image classification on CIFAR100. Utilized transfer learning; used a 
-                            pretrained ResNet and trained it on CIFAR100. 
-                            Test accuracy without using pretrained model is 63.92%, otherwise 87.95%.
+                        <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 4 - 3-D Particle System </b> <br>
+                            Rendered a system of bouncing spheres in a 3-D box, where user can manually generate new spheres in it; <br>
+                            Simulated gravity and friction which affects the sphere's motion.
+                            <br> <br> 
+                            <hr style="height:1pt; visibility:hidden;" />
                         </div>
                     </p>
                 </div>
             </div>
-            
+
+
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/445_3.jpg" width="96px" height="96px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/445_3.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
+                    <div style="text-indent: 0.05em; margin-left: 0.35em;">
                     <p class="media-heading">
                         <strong>
                             ECE 445 Senior Design
@@ -262,42 +248,45 @@
                     </p>
                 </div>
             </div>
-            
+
+            <hr style="height:5pt; visibility:hidden;" />            
+
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/391_4.jpg" width="96px" height="96px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/391_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
+                    <div style="text-indent: 0.05em; margin-left: 0.35em;">
                     <p class="media-heading">
                         <strong>
                             Machine Problem 3: "Illinix", ECE 391 Computer Systems Engineering
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Implemented an operating system having similarities with Linux in x86 Assembly and C with three teammates <br>
-                        Implemented interrupt, exception and system call handlers; implemented the procedure of context switch <br>
+                        Implemented an operating system having similarities with Linux in x86 Assembly and C with three teammates; <br>
+                        Implemented interrupt, exception and system call handlers; implemented the procedure of context switch; <br>
                         Implemented RTC, PIT, keyboard, mouse and speaker drivers with a teammate
-                        Thoroughly understood paging and scheduling
-
+                        Thoroughly understood paging and scheduling.
                     </p>
                 </div>
             </div> 
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/385_4.jpg" width="96px" height="96px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/385_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
+                    <div style="text-indent: 0.05em; margin-left: 0.35em;">
                     <p class="media-heading">
                         <strong>
                             Final project, ECE 385 Digital Systems Laboratory
                         </strong><br>
                     </p>
                     <p class="abstract-text">
-                        Wrote design proposal and the project’s final report <br>
-                        Utilized Altera DE2-115 board, Quartus II and ModelSim to perform FPGA programming <br>
-                        Designed a large-scale state machine to control the game’s logic and flow using language SystemVerilog <br>
-                        Utilized USB and VGA ports to achieve keyboard control on the game and display .png pictures precisely on monitor
+                        Wrote design proposal and the project’s final report; <br>
+                        Utilized Altera DE2-115 board, Quartus II and ModelSim to perform FPGA programming; <br>
+                        Designed a large-scale state machine to control the game’s logic and flow using language SystemVerilog; <br>
+                        Utilized USB and VGA ports to achieve keyboard control on the game and display .png pictures precisely on monitor.
                     </p>
                 </div>
             </div>
