--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="uikit/css/uikit.css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Permanent+Marker&display=swap" rel="stylesheet">
+	<link rel="preload" as="font" href="/calli/FZHuangKJW.TTF" type="font/ttf" crossorigin="anonymous">
 	<script src="uikit/js/uikit.min.js"></script>
 	<script src="uikit/js/uikit-icons.min.js"></script>
 </head>
